--- a/installation/environment.yml
+++ b/installation/environment.yml
@@ -1,4 +1,4 @@
-name: PyRFQ
+name: PyPA
 channels:
   - pythonocc
   - tpaviot
@@ -16,6 +16,8 @@ dependencies:
   - fontconfig=2.13.0=h9420a91_0
   - freeimageplus=3.17.0=0
   - freetype=2.10.0=he983fc9_0
+  - gfortran_impl_linux-64=7.3.0=hdf63c60_1
+  - gfortran_linux-64=7.3.0=h553295d_7
   - gl2ps=1.3.8=h14c3975_4
   - glib=2.56.2=hd408876_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
@@ -70,6 +72,5 @@ dependencies:
   - wheel=0.33.4=py36_0
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=h7b6447c_3
-  - gfortran_linux-64=8.2.0
-prefix: /home/rfq-dip-student/anaconda3/envs/PyRFQ
+prefix: /home/rfq-dip-student/anaconda3/envs/PyPA
 
