--- a/installation/environment.yml
+++ b/installation/environment.yml
@@ -41,7 +41,7 @@ dependencies:
   - mkl_fft=1.0.12=py36ha843d7b_0
   - mkl_random=1.0.2=py36hd81dba3_0
   - mpi4py=2.0.0=py36_2
-  - mpich2=1.4.1p1=0
+  - mpich=3.2.1
   - ncurses=6.1=he6710b0_1
   - numba=0.43.1=py36h962f231_0
   - numpy=1.16.4=py36h7e9f1db_0
